// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartDonut Component get data error 1`] = `
<div>
  <div
    class="sc-bdvvtL dCkjDj"
  >
    <h2
      class="sc-dkPtRN cZRHky"
    >
      Error: Network Error
    </h2>
  </div>
</div>
`;

exports[`ChartDonut Component get data success 1`] = `
<div>
  <div
    class="sc-bdvvtL dCkjDj"
  >
    <button
      class="btn-labels btn btn-primary btn-sm"
      type="button"
    >
      Labels
    </button>
    <canvas
      height="150"
      role="img"
      width="300"
    />
  </div>
</div>
`;

exports[`ChartDonut Component loading data 1`] = `
<div>
  <div
    class="sc-bdvvtL dCkjDj"
  >
    <div
      class="sc-gsDKAQ giLnYi"
    >
      <div
        class="spinner-border"
      />
    </div>
  </div>
</div>
`;
